apps/arrs/radarr-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: radarr
    app.kubernetes.io/name: radarr
    app.kubernetes.io/part-of: arrs
  name: radarr
spec:
  serviceName: radarr
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
      app.kubernetes.io/part-of: arrs
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        app.kubernetes.io/name: radarr
        app.kubernetes.io/part-of: arrs
    spec:
      containers:
        - env:
            - name: PGID
              value: "1001"
            - name: PUID
              value: "1001"
            - name: TZ
              value: America/New_York
          image: linuxserver/radarr:5.14.0
          name: radarr
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /movies
              name: movies
            - mountPath: /downloads
              name: movie-downloads
          ports:
            - name: radarr
              containerPort: 7878
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: movies
          nfs:
            server: 172.16.0.5
            path: /volume1/Movies
        - name: movie-downloads
          nfs:
            server: 172.16.0.5
            path: /volume1/downloads/radarr
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: nfs-subdir-external-provisioner
        resources:
          requests:
            storage: 20Gi
        mountOptions:
          - nolock
