apps/arrs/radarr-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: arrs
spec:
  selector:
    app: radarr
  type: ClusterIP
  ports:
    - name: radarr
      protocol: TCP
      port: 7878
      targetPort: 7878
