apps/arrs/ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: arrs
spec:
  rules:
    - host: arrs.lab.8none1.com
      http:
        paths:
          - path: /radarr
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  name: radarr
